--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
                 <input class="csf-logon-userid" placeholder="Email Address">
                 <input class="csf-logon-password" type="password" placeholder="Password">
                 <div class="csf-logon-button-box">
-                    <button onclick="clientAuth.logonForgot()" class="trs-button csf-logon-button csf-logon-forgot">Forgot Password</button>
+                    <!-- <button onclick="clientAuth.logonForgot()" class="trs-button csf-logon-button csf-logon-forgot">Forgot Password</button> -->
                     <button onclick="clientAuth.logonCancel()" class="trs-button csf-logon-button csf-logon-cancel">Cancel</button>
                     <button onclick="clientAuth.logonOkay()"   class="trs-button csf-logon-button csf-logon-okay">Okay</button>
                 </div>
